# GameEngine

./: .clang-format  .gitignore  CMakeLists.txt
shaders/: common.h  point_light.frag.glsl  point_light.vert.glsl  simple.frag.glsl  simple.vert.glsl  texture.frag.glsl  texture.vert.glsl
src/: buffer.h  camera.cpp  camera.h  descriptors.cpp  descriptors.h  device.cpp  device.h  engine.cpp  engine.h  first_person_movement_controller.cpp  first_person_movement_controller.h  frame_info.h  game_object.cpp  game_object.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  main.cpp  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  simple_render_system.cpp  simple_render_system.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  utils.h  window.cpp  window.h
src/systems/: imgui_system.cpp  imgui_system.h  point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h  texture_render_system.cpp  texture_render_system.h
src/vulkan/: buffer.cpp  descriptors.cpp  device.h  pipeline.cpp  pipeline.h  renderer.h  swapchain.cpp  swapchain.h
